--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/10.9500-9999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/10.9500-9999-of-mysql-mode.md
@@ -352,6 +352,11 @@ ERROR 9694 (42000) : Duplicate condition information item '%s'
 
 * 解决方法：condition 定义中删除重复项。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ERROR 9695 (02000) : Unhandled user-defined not found condition
 ------------------------------------------------------------------------------------------
 
@@ -360,6 +365,11 @@ ERROR 9695 (02000) : Unhandled user-defined not found condition
 * 错误原因：使用了用户未定义的 condition。
 
 * 解决方法：不要使用未定义的 condition。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ERROR 20000 (HY000) : The stored procedure 'raise_application_error' was called which causes this error to be generated","-%05ld: %.\*s
 ------------------------------------------------------------------------------------------------------------------------------------------------------------
