--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
@@ -128,9 +128,14 @@
 
 * 兼容 MySQL 错误码：1059
 
-## ERROR 1060 (42S21) : Duplicate column name '%.\*s'
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
-* OceanBase 错误码：5008
+## ERROR 1060 (42S21) : Duplicate column group name '%.*s'
+
+* OceanBase 错误码：5404
 
 * 兼容 MySQL 错误码：1060
 
@@ -229,6 +234,11 @@
 * OceanBase 错误码：9577
 
 * 兼容 MySQL 错误码：1074
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1075 (42000) : Incorrect table definition; there can be only one auto column
 
@@ -344,6 +354,12 @@
 
 * 兼容 MySQL 错误码：1103
 
+## ERROR 1108 (HY000） : Incorrect parameters to procedure \'%.*s\'
+
+* OceanBase 错误码：5406
+
+* 兼容 MySQL 错误码：1108
+
 ## ERROR 1109 (42S02) : Unknown table '%.\*s' in %.\*s
 
 * OceanBase 错误码：5200
@@ -368,6 +384,11 @@
 
 * 兼容 MySQL 错误码：1113
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 1115 (42000) : Unknown character set: '%.\*s'
 
 * OceanBase 错误码：5142
@@ -385,6 +406,10 @@
 * OceanBase 错误码：5199
 
 * 兼容 MySQL 错误码：1118
+
+相关问题处理 KB：
+
+  [建表错误，错误代码 1118](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000066?back=kb)
 
 ## ERROR 1122 (HY000) : Can not load function %s
 
@@ -452,7 +477,7 @@
 
 * 兼容 MySQL 错误码：1138
 
-## ERROR 1139 (42000) : Got  ## ERROR 'empty (sub)expression' from regexp
+## ERROR 1139 (42000) : Got error '%s' from regexp
 
 * OceanBase 错误码：5115
 
@@ -482,7 +507,11 @@
 
 * 兼容 MySQL 错误码：1146
 
-## ERROR 1149 (42000) : You have an  ## ERROR in your SQL syntax; check the manual that corresponds to your OceanBase version for the right syntax to use
+相关问题处理 KB：
+
+* [OBServer 重启失败，错误代码 5019](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000042?back=kb)
+
+## ERROR 1149 (42000) : You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for the right syntax to use
 
 * OceanBase 错误码：5006
 
@@ -578,6 +607,12 @@
 
 * 兼容 MySQL 错误码：1210
 
+相关问题处理 KB：
+
+* [OBServer 启动失败，错误代码 4002](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000025?back=kb)
+
+* [资源池错误，错误代码 1210](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000010171?back=kb)
+
 ## ERROR 1210 (HY000) : Miss argument for %s
 
 * OceanBase 错误码：4272
@@ -632,6 +667,11 @@
 
 * 兼容 MySQL 错误码：1226
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 1227 (42501) : Access denied; you need (at least one of) the %s privilege(s) for this operation
 
 * OceanBase 错误码：5036
@@ -679,6 +719,16 @@
 * OceanBase 错误码：4007
 
 * 兼容 MySQL 错误码：1235
+
+相关问题处理 KB：
+
+* [减少 Unit 配置错误，错误代码 1235](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000096?back=kb)
+* [指定逆序索引报错，错误代码 1235](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000104?back=kb)
+* [清理分区失败，错误代码 4007](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000194?back=kb)
+* [删除分区失败，错误代码 1235](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000146?back=kb)
+* [分区表更新错误，错误代码 1235](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000157?back=kb)
+* [DDL 语句添加外键错误，错误代码 1235](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000067?back=kb)
+* [跨节点访问数据错误，错误代码 1235](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000001060?back=kb)
 
 ## ERROR 1235 (42000) : This version of OceanBase doesn't yet support 'multiple triggers with the same action time and event for one table'
 
@@ -734,6 +784,17 @@
 
 * 兼容 MySQL 错误码：1250
 
+## ERROR 1252 (7280) : All parts of a SPATIAL index must be NOT NULL.
+
+* OceanBase 错误码：5238
+
+* 兼容 MySQL 错误码：1252
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ## ERROR 1253 (42000) : COLLATION '%.\*s' is not valid for CHARACTER SET '%.\*s'
 
 * OceanBase 错误码：5144
@@ -745,6 +806,11 @@
 * OceanBase 错误码：5124
 
 * 兼容 MySQL 错误码：1259
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1260 (42000) : Row %ld was cut by GROUP_CONCAT()
 
@@ -908,6 +974,10 @@
 
 * 兼容 MySQL 错误码：1300
 
+相关问题处理 KB：
+
+* [mysqldump 还原导入错误，错误代码 1300](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000084?back=kb)
+
 ## ERROR 1301 (HY000) : Result of %s() was larger than max_allowed_packet (%d)  truncated
 
 * OceanBase 错误码：5316
@@ -968,6 +1038,11 @@
 
 * 兼容 MySQL 错误码：1309
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 1313 (42000) : RETURN is only allowed in a FUNCTION
 
 * OceanBase 错误码：5583
@@ -986,6 +1061,10 @@
 
 * 兼容 MySQL 错误码：1317
 
+相关问题处理 KB：
+
+  [分区表 JOIN 报错，错误码 1317](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000018?back=kb)
+
 ## ERROR 1318 (42000) : Incorrect number of arguments for %s %s; expected %u, got %u
 
 * OceanBase 错误码：5555
@@ -1003,6 +1082,11 @@
 * OceanBase 错误码：9575
 
 * 兼容 MySQL 错误码：1320
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1321 (2F005) : FUNCTION %s ended without RETURN
 
@@ -1057,6 +1141,11 @@
 * OceanBase 错误码：4026
 
 * 兼容 MySQL 错误码：1329
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1330 (42000) : Duplicate parameter: %.\*s
 
@@ -1138,7 +1227,7 @@
 
 ## ERROR 1353 (HY000) : View's SELECT and view's field list have different column counts
 
-* OceanBase 错误码：5242
+* OceanBase 错误码：5740
 
 * 兼容 MySQL 错误码：1353
 
@@ -1154,8 +1243,8 @@
 
 * 兼容 MySQL 错误码：1360
 
-## ERROR 1362 (HY000) : Updating of %s row is not allowed in 
-%s trigger
+## ERROR 1362 (HY000) : Updating of %s row is not allowed in %s trigger
+
 * OceanBase 错误码：9584
 
 * 兼容 MySQL 错误码：1362
@@ -1208,11 +1297,27 @@
 
 * 兼容 MySQL 错误码：1368
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 1369 (HY000) : CHECK OPTION failed '%.\*s.%.\*s'
 
 * OceanBase 错误码：5971
 
 * 兼容 MySQL 错误码：1369
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+  
+## ERROR 1382 (HY000） : The \'%.*s\' syntax is reserved for purposes internal to the OceanBase Server
+
+* OceanBase 错误码：5405
+
+* 兼容 MySQL 错误码：1382
 
 ## ERROR 1390 (54000) : Prepared statement contains too many placeholders
 
@@ -1274,7 +1379,7 @@
 
 * 兼容 MySQL 错误码：1400
 
-## ERROR 1401 (XAE03) : XAER_RMERR: Fatal  ## ERROR occurred in the transaction branch - check your data for consistency
+## ERROR 1401 (XAE03) : XAER_RMERR: Fatal error occurred in the transaction branch - check your data for consistency
 
 * OceanBase 错误码：6250
 
@@ -1334,11 +1439,27 @@
 
 * 兼容 MySQL 错误码：1415
 
+## ERROR 1416 (22003) : Cannot get geometry object from data you send to the GEOMETRY field.
+
+* OceanBase 错误码：7276
+
+* 兼容 MySQL 错误码：1416
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始弃用。</p>
+</main>
+
 ## ERROR 1422 (HY000) : Explicit or implicit commit is not allowed in stored function or trigger
 
 * OceanBase 错误码：5576
 
 * 兼容 MySQL 错误码：1422
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1422 (HY000) : '%.\*s' is not allowed in stored function or trigger
 
@@ -1387,6 +1508,11 @@
 * OceanBase 错误码：9578
 
 * 兼容 MySQL 错误码：1439
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1440 (XAE08) : The XID already exists
 
@@ -1532,6 +1658,11 @@
 
 * 兼容 MySQL 错误码：1499
 
+相关问题处理 KB：
+
+* [创建分区表错误，错误代码 1499/ORA-00600](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000076?back=kb)
+* [创建分区表错误，错误代码 1499](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000010175?back=kb)
+
 ## ERROR 1503 (HY000) : A %s must include all columns in the table's partitioning function
 
 * OceanBase 错误码：5261
@@ -1556,7 +1687,7 @@
 
 * 兼容 MySQL 错误码：1505
 
-## ERROR 1507 (HY000) :  ## ERROR in list of partitions to DROP
+## ERROR 1507 (HY000) : error in list of partitions to DROP
 
 * OceanBase 错误码：5303
 
@@ -1634,6 +1765,12 @@
 
 * 兼容 MySQL 错误码：1582
 
+## ERROR 1583 (42000） : Incorrect parameters in the call to native function '%.*s'
+
+* OceanBase 错误码：5407
+
+* 兼容 MySQL 错误码：1583
+
 ## ERROR 1613 (XA106) : XA_RBTIMEOUT: Transaction branch was rolled back: took too long
 
 * OceanBase 错误码：6253
@@ -1658,11 +1795,16 @@
 
 * 兼容 MySQL 错误码：1629
 
-## ERROR 1642 (HY000) : Unhandled user-defined warning condition
+## ERROR 1642 (01000) : Unhandled user-defined warning condition
 
 * OceanBase 错误码：9701
 
 * 兼容 MySQL 错误码：1642
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ## ERROR 1644 (HY000) : Unhandled user-defined exception condition
 
@@ -1675,6 +1817,11 @@
 * OceanBase 错误码：9702
 
 * 兼容 MySQL 错误码：1645
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1646 (HY000) : SIGNAL/RESIGNAL can only use a CONDITION defined with SQLSTATE
 
@@ -1784,6 +1931,11 @@
 
 * 兼容 MySQL 错误码：1758
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 1792 (25006) : Cannot execute statement in a READ ONLY transaction
 
 * OceanBase 错误码：5220
@@ -1834,11 +1986,14 @@
 
 ## ERROR 3011 (HY000) : Referenced trigger '%s' for the given action time and event type does not exist
 
--
-
 * OceanBase 错误码：9704
 
 * 兼容 MySQL 错误码：3011
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 3020 (2201E) : Invalid argument for logarithm
 
@@ -1848,11 +2003,273 @@
 
 ## ERROR 3028 (HY000) : Expression #%d of ORDER BY contains aggregate function and applies to a UNION
 
--
-
 * OceanBase 错误码：5263
 
 * 兼容 MySQL 错误码：3028
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
+## ERROR 3033 (HY000) : Binary geometry function %s given two geometries of different srids: %u and %u, which should have been identical
+
+* OceanBase 错误码：7201
+
+* 兼容 MySQL 错误码：3033
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3034 (HY000) : Calling geometry function %s with unsupported types of arguments
+
+* OceanBase 错误码：7202
+
+* 兼容 MySQL 错误码：3034
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3035 (HY000) : Unknown GIS error occurred in function %s
+
+* OceanBase 错误码：7203
+
+* 兼容 MySQL 错误码：3035
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3036 (HY000) : Unknown exception caught in GIS function %s
+
+* OceanBase 错误码：7204
+
+* 兼容 MySQL 错误码：3036
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3037 (22023) : Invalid GIS data provided to function %s
+
+* OceanBase 错误码：7205
+
+* 兼容 MySQL 错误码：3037
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3038 (HY000) : The geometry has no data in function %s.
+
+* OceanBase 错误码：7206
+
+* 兼容 MySQL 错误码：3038
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3039 (HY000) : Unable to calculate centroid because geometry is empty in function %s.
+
+* OceanBase 错误码：7207
+
+* 兼容 MySQL 错误码：3039
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3040 (HY000) : Geometry overlay calculation error: geometry data is invalid in function %s.
+
+* OceanBase 错误码：7208
+
+* 兼容 MySQL 错误码：3040
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3041 (HY000) : Geometry turn info calculation error: geometry data is invalid in function %s.
+
+* OceanBase 错误码：7209
+
+* 兼容 MySQL 错误码：3041
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3042 (HY000) : Analysis procedures of intersection points interrupted unexpectedly in function %s.
+
+* OceanBase 错误码：7210
+
+* 兼容 MySQL 错误码：3042
+
+## ERROR 3043 (HY000) : Unknown exception thrown in function %s.
+
+* OceanBase 错误码：7211
+
+* 兼容 MySQL 错误码：3043
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3044 (HY000) : Memory allocation error: %-.256s in function %s.
+
+* OceanBase 错误码：7265
+
+* 兼容 MySQL 错误码：3044
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3045 (HY000) : Domain error", "Domain error: %-.256s in function %s.
+
+* OceanBase 错误码：7266
+
+* 兼容 MySQL 错误码：3045
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3046 (HY000) : Length error: %-.256s in function %s.
+
+* OceanBase 错误码：7267
+
+* 兼容 MySQL 错误码：3046
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3047 (HY000) : Invalid argument error: %-.256s in function %s.
+
+* OceanBase 错误码：7268
+
+* 兼容 MySQL 错误码：3047
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3048 (HY000) : Out of range error: %-.256s in function %s.
+
+* OceanBase 错误码：7269
+
+* 兼容 MySQL 错误码：3048
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3049 (HY000) : Overflow error: %-.256s in function %s.
+
+* OceanBase 错误码：7270
+
+* 兼容 MySQL 错误码：3049
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3050 (HY000) : Range error: %-.256s in function %s.
+
+* OceanBase 错误码：7271
+
+* 兼容 MySQL 错误码：3050
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3051 (HY000) : Underflow error: %-.256s in function %s.
+
+* OceanBase 错误码：7272
+
+* 兼容 MySQL 错误码：3051
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3052 (HY000) : Logic error: %-.256s in function %s.
+
+* OceanBase 错误码：7273
+
+* 兼容 MySQL 错误码：3052
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3053 (HY000) : Runtime error: %-.256s in function %s.
+
+* OceanBase 错误码：7274
+
+* 兼容 MySQL 错误码：3053
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3054 (HY000) : Unknown exception: %-.384s in function %s.
+
+* OceanBase 错误码：7275
+
+* 兼容 MySQL 错误码：3054
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3055 (HY000) : Geometry byte string must be little endian.
+
+* OceanBase 错误码：7212
+
+* 兼容 MySQL 错误码：3055
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3060 (HY000) : Do not support online operation on table with GIS index
+
+* OceanBase 错误码：7213
+
+* 兼容 MySQL 错误码：3060
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ## ERROR 3064 (HY000) : invalid type given for an argument
 
@@ -1883,6 +2300,28 @@
 * OceanBase 错误码：5039
 
 * 兼容 MySQL 错误码：3118
+
+## ERROR 3122 (HY000) : Inconsistent intersection points.
+
+* OceanBase 错误码：7214
+
+* 兼容 MySQL 错误码：3122
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始弃用。</p>
+</main>
+
+## ERROR 3134 (HY000) : Parameter %s exceeds the maximum number of points in a geometry (%lu) in function %s.
+
+* OceanBase 错误码：7215
+
+* 兼容 MySQL 错误码：3134
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始弃用。</p>
+</main>
 
 ## ERROR 3140 (22032) : Invalid JSON text
 
@@ -2010,29 +2449,220 @@
 
 * 兼容 MySQL 错误码：3505
 
+## ERROR 3516 (22S01) : %.64s value is a geometry of unexpected type %.64s in %.64s.
+
+* OceanBase 错误码：7216
+
+* 兼容 MySQL 错误码：3516
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3516 (22S01) : Unknown WKB type(%d)! Full WKB type number was (%d).
+
+
+* OceanBase 错误码：7288
+
+* 兼容 MySQL 错误码：3516
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3517 (SR002) : Can\'t parse the spatial reference system definition of SRID %u.
+
+
+* OceanBase 错误码：7217
+
+* 兼容 MySQL 错误码：3517
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3518 (SR003) : The spatial reference system definition for SRID %u does not specify the mandatory %s (EPSG %u) projection parameter.
+
+
+* OceanBase 错误码：7218
+
+* 兼容 MySQL 错误码：3518
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3519 (01000) : There\'s no spatial reference system with SRID %u.
+
+
+* OceanBase 错误码：7219
+
+* 兼容 MySQL 错误码：3519
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3520 (22S00) : Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which is not Cartesian.
+
+
+* OceanBase 错误码：7220
+
+* 兼容 MySQL 错误码：3520
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3521 (SR001) : Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which has not been defined.
+
+
+* OceanBase 错误码：7221
+
+* 兼容 MySQL 错误码：3521
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3548 (SR001) : There\'s no spatial reference system with SRID %u.
+
+
+* OceanBase 错误码：7222
+
+* 兼容 MySQL 错误码：3548
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3548 (SR001) : Spatial reference system is empty
+
+
+* OceanBase 错误码：7285
+
+* 兼容 MySQL 错误码：3548
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3558 (22023) : Invalid option key \'%.192s\' in function %.192s.
+
+
+* OceanBase 错误码：7286
+
+* 兼容 MySQL 错误码：3558
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3559 (22023) : Invalid value \'%.192s\' for option \'%.192s\' in function \'%.192s\'.
+
+* OceanBase 错误码：7287
+
+* 兼容 MySQL 错误码：3559
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3560 (22023) : The string \'%.192s\' is not a valid key %c value pair in function %.192s.
+
+* OceanBase 错误码：7283
+
+* 兼容 MySQL 错误码：3560
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3565 (01000) : There\'s no spatial reference system with SRID %u. The axis order is unknown.
+
+* OceanBase 错误码：7223
+
+* 兼容 MySQL 错误码：3565
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3573 (HY000) ：recursive WITH clause must use a UNION ALL operation
+
+* OceanBase 错误码：5742
+
+* 兼容 MySQL 错误码：3573
+
 ## ERROR 3574 (HY000) : Recursive Common Table Expression should have one or more non-recursive query blocks followed by one or more recursive ones: %s
 
 * OceanBase 错误码：5982
 
 * 兼容 MySQL 错误码：3574
 
+## ERROR 3575 (HY000) ：Recursive Common Table Expression can contain neither aggregation nor window functions in recursive query block
+
+* OceanBase 错误码：5758
+
+* 兼容 MySQL 错误码：3575
+
+## ERROR 3576 (HY000) ：In recursive query block of Recursive Common Table Expression, the recursive table must neither be in the right argument of a LEFT JOIN, nor be forced to be non-first with join order hints
+
+* OceanBase 错误码：5759
+
+* 兼容 MySQL 错误码：3576
+
+## ERROR 3577 (HY000) ：In recursive query block of Recursive Common Table Expression, the recursive table must be referenced only once, and not in any subquery
+
+* OceanBase 错误码：5744
+
+* 兼容 MySQL 错误码：3577
+
 ## ERROR 3581 (HY000) :A window which depends on another cannot define partitioning
 
-* OceanBase 错误码：9087
+* OceanBase 错误码：5438
 
 * 兼容 MySQL 错误码：3581
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 3582 (HY000) :Window '%.*s' has a frame definition, so cannot be referenced by another window
 
-* OceanBase 错误码：9088
+* OceanBase 错误码：5439
 
 * 兼容 MySQL 错误码：3582
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 3583 (HY000) :Window '%.*s' cannot inherit '%.*s' since both contain an ORDER BY clause
 
-* OceanBase 错误码：9089
+* OceanBase 错误码：5440
 
 * 兼容 MySQL 错误码：3583
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 3587 (HY000) : Window '%s' with RANGE N PRECEDING/FOLLOWING frame requires exactly one ORDER BY expression of numeric or temporal type
 
@@ -2052,6 +2682,480 @@
 
 * 兼容 MySQL 错误码：3596
 
+ERROR 3616 (22S02) : Longitude %f is out of range in function %.192s. It must be within (%f, %f].
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7263
+
+* 兼容 MySQL 错误码：3616
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3617 (22S03) : Latitude %f is out of range in function %.192s. It must be within [%f, %f].
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7264
+
+* 兼容 MySQL 错误码：3617
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3618 (22S00) : %.192s(%.80s) has not been implemented for geographic spatial reference systems.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7224
+
+* 兼容 MySQL 错误码：3618
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3636 （HY000） : Recursive query aborted after %u iterations. Try increasing @@cte_max_recursion_depth to a larger value.
+
+* OceanBase 错误码：5408
+
+* 兼容 MySQL 错误码：3636
+
+ERROR 3643 (HY000) : The SRID of the geometry does not match the SRID of the column. The SRID of the geometry is %lu, but the SRID of the column is %lu. Consider changing the SRID of the geometry or the SRID property of the column.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7225
+
+* 兼容 MySQL 错误码：3643
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3644 (HY000) : The SRID specification on the column \'%.64s\' cannot be changed because there is a spatial index on the column. Please remove the spatial index before altering the SRID specification.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7226
+
+* 兼容 MySQL 错误码：3644
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3674 (HY000) : The spatial index on column \'%.64s\' will not be used by the query optimizer since the column does not have an SRID attribute. Consider adding an SRID attribute to the column.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7227
+
+* 兼容 MySQL 错误码：3674
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3682 (22S00) : Function %.192s is only defined for SRID 0 and SRID 4326.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7228
+
+* 兼容 MySQL 错误码：3682
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3704 (22S00) : %.192s(%.80s) has not been implemented for Cartesian spatial reference systems.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7229
+
+* 兼容 MySQL 错误码：3704
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3705 (22S00) : %.192s(%.80s) has not been implemented for projected spatial reference systems.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7230
+
+* 兼容 MySQL 错误码：3705
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3706 (22023) : Invalid radius provided to function %s: Radius(%lf) must be greater than zero.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7284
+
+* 兼容 MySQL 错误码：3706
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3708 (SR006) : Missing mandatory attribute %s.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7231
+
+* 兼容 MySQL 错误码：3708
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3709 (SR006) : Multiple definitions of attribute %s.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7232
+
+* 兼容 MySQL 错误码：3709
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3710 (SR006) : The spatial reference system name can\'t be an empty string or start or end with whitespace.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7233
+
+* 兼容 MySQL 错误码：3710
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3711 (SR006) : The organization name can\'t be an empty string or start or end with whitespace.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7234
+
+* 兼容 MySQL 错误码：3711
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3712 (SR004) : There is already a spatial reference system with SRID %u.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7235
+
+* 兼容 MySQL 错误码：3712
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3713 (01S00) : There is already a spatial reference system with SRID %u.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7236
+
+* 兼容 MySQL 错误码：3713
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3714 (SR000) : SRID 0 is not modifiable.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7237
+
+* 兼容 MySQL 错误码：3714
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3715 (01S01) : The SRID range [%u, %u] has been reserved for system use. SRSs in this range may be added, modified or removed without warning during upgrade.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7238
+
+* 兼容 MySQL 错误码：3715
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3716 (SR005) : Can\'t modify SRID %u. There is at least one column depending on it.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7239
+
+* 兼容 MySQL 错误码：3716
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3717 (SR006) : Invalid character in attribute %s.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7240
+
+* 兼容 MySQL 错误码：3717
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3718 (SR006) : Attribute %s is too long. The maximum length is %u characters.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7241
+
+* 兼容 MySQL 错误码：3718
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3726 (22S00) : Function %s is only defined for geographic spatial reference systems, but one of its arguments is in SRID %u, which is not geographic.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7242
+
+* 兼容 MySQL 错误码：3726
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3727 (22023) : Function %s encountered a polygon that was too large. Polygons must cover less than half the planet.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7243
+
+* 兼容 MySQL 错误码：3727
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3728 (HY000) : Spatial indexes can\'t be primary or unique indexes.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7244
+
+* 兼容 MySQL 错误码：3728
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3729 (HY000) : The index type %.20s is not supported for spatial indexes.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7245
+
+* 兼容 MySQL 错误码：3729
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3729 (HY000) : The index type %s is not supported for spatial indexes.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7281
+
+* 兼容 MySQL 错误码：3729
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3731 (22S02) : A parameter of function %.192s contains a geometry with longitude %f, which is out of range. It must be within (%f, %f].
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7246
+
+* 兼容 MySQL 错误码：3731
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3732 (22S03) : A parameter of function %.192s contains a geometry with latitude %f, which is out of range. It must be within [%f, %f].
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7247
+
+* 兼容 MySQL 错误码：3732
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3736 (SR002) : The spatial reference system definition for SRID %u specifies invalid geographic axes \'%.20s\' and \'%.20s\'. One axis must be NORTH or SOUTH and the other must be EAST or WEST.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7248
+
+* 兼容 MySQL 错误码：3736
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3737 (SR002) : The length of the semi-major axis must be a positive number.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7249
+
+* 兼容 MySQL 错误码：3737
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3738 (SR002) : The inverse flattening must be larger than 1.0, or 0.0 if the ellipsoid is a sphere.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7250
+
+* 兼容 MySQL 错误码：3738
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3739 (SR002) : The angular unit conversion factor must be a positive number.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7251
+
+* 兼容 MySQL 错误码：3739
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3740 (SR002) : The prime meridian must be within (-180, 180] degrees, specified in the SRS angular unit.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7252
+
+* 兼容 MySQL 错误码：3740
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3741 (22S00) : Transformation from SRID %u is not supported.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7253
+
+* 兼容 MySQL 错误码：3741
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3742 (22S00) : Transformation to SRID %u is not supported.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7254
+
+* 兼容 MySQL 错误码：3742
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3743 (22S00) : Transformation from SRID %u is not supported. The spatial reference system has no TOWGS84 clause.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7255
+
+* 兼容 MySQL 错误码：3743
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3744 (22S00) : Transformation to SRID %u is not supported. The spatial reference system has no TOWGS84 clause.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7256
+
+* 兼容 MySQL 错误码：3744
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3753 (42000) : Cannot create a functional index on a function that returns a JSON or GEOMETRY value.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7257
+
+* 兼容 MySQL 错误码：3753
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+ERROR 3760 (HY000) : Spatial functional index is not supported.
+---------------------------------------------------------------------------------------------------
+
+* OceanBase 错误码：7258
+
+* 兼容 MySQL 错误码：3760
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ## ERROR 3812 (HY000) : An expression of non-boolean type specified to a check constraint \\'%.\*s\\'
 
 * OceanBase 错误码：5987
@@ -2063,6 +3167,11 @@
 * OceanBase 错误码：5786
 
 * 兼容 MySQL 错误码：3813
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 3814 (HY000) : An expression of a check constraint \\'%.\*s\\' contains disallowed function: %.\*s
 
@@ -2094,6 +3203,11 @@
 
 * 兼容 MySQL 错误码：3819
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 3820 (HY000) : Check constraint \\'%.\*s\\' refers to non-existing column \\'%.\*s\\'
 
 * OceanBase 错误码：5994
@@ -2112,6 +3226,11 @@
 
 * 兼容 MySQL 错误码：3822
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 3939 (HY000) : Table has multiple constraints with the name \\'%.\*s\\'. Please use constraint specific \\'%.\*s\\' clause
 
 * OceanBase 错误码：5986
@@ -2123,6 +3242,11 @@
 * OceanBase 错误码：5692
 
 * 兼容 MySQL 错误码：3940
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 3941 (HY000) : Altering constraint enforcement is not supported for the constraint \\'%.\*s\\'. Enforcement state alter is not supported for the PRIMARY, UNIQUE and FOREIGN KEY type constraints
 
