--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
@@ -168,6 +168,10 @@
 
 * 解决方式：根据具体的原因，调整资源的分配大小。
 
+相关问题处理 KB：
+
+  [创建表失败，错误代码 4624](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000181?back=kb)
+
 ## ERROR 4626 (HY000) : resource pool \\'%s\\' has already been granted to a tenant
 
 * OceanBase 错误码：4626
@@ -181,6 +185,10 @@
   * 租户缩容减资源池。
 
   * 新建另一个资源池，不消费该资源池。
+
+相关问题处理 KB：
+
+  [资源池错误，错误代码 4626](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000010169?back=kb)
 
 ## ERROR 4628 (HY000) : server has already been deleted
 
@@ -386,6 +394,10 @@
 
 * 解决方式：确保 Zone 下的 Unit 的数目小于这个 Zone 下 Server 的数量。
 
+相关问题处理 KB：
+
+  [资源池错误，错误代码 4656](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000092?back=kb)
+
 ## ERROR 4657 (HY000) : resource pool list %s unit servers intersect
 
 * OceanBase 错误码：4657
@@ -393,6 +405,10 @@
 * 错误原因：属于同一个租户的所有资源池内的 Zone 有交集。
 
 * 解决方式：确保属于同一个租户的所有资源池内的 Zone 没有交集。
+
+相关问题处理 KB：
+
+  [资源池错误，错误代码 4657](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000010170?back=kb)
 
 ## ERROR 4659 (HY000) : invalid %s value,  min value is %s
 
@@ -540,11 +556,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方式：内部错误码。如果返回，请联系技术支持人员确认。
 
-## ERROR 4688 (HY000) : standby cluster support weak read only
+## ERROR 4688 (HY000) : standby tenant is read only
 
 * OceanBase 错误码：4688
 
-* 错误原因：备集群仅支持弱一致性读。
+* 错误原因：备集群仅支持读。
 
 * 解决方式：如果要修改备集群，需要执行角色切换，切换为主集群。
 
@@ -587,6 +603,10 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：检查是否允许 `drop column` 失败，失败场景一般是当前处于合并状态，不允许 `drop column`。
 
 * 解决方式：等待所有分区合并完成，如果合并完成后仍然报错，请联系技术支持人员确认。
+
+相关问题处理 KB：
+
+  [删除列失败，错误代码 4694](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000117?back=kb)
 
 ## ERROR 4695 (HY000) : not standby cluster
 
@@ -754,6 +774,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：内部错误码。如果返回，请联系技术支持人员确认。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码在 V4.0.0 版本开始进行了修改，错误信息由 <code>ERROR 4719 (HY000) : partition has been dropped  </code> 调整为 <code>ERROR 4719 (HY000) : log stream does not exist </code>。</p>
+</main>
+
 ## ERROR 4720 (HY000) : too many log streams were defined for this tenant
 
 * OceanBase 错误码：4720
@@ -761,6 +786,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：单个 OBServer 节点上一个租户最大支持 100 个日志流，如果创建的日志流过多，则报该错误。
 
 * 解决方法：减少租户在单个 OBServer 节点上的日志流个数。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4721 (HY000) : log stream location does not exist
 
@@ -770,6 +800,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：一般会自动重试。若重试后仍报错，需排查对应日志流是否存在以及是否成功汇报。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4722 (HY000) : log stream location leader does not exist
 
 * OceanBase 错误码：4722
@@ -777,6 +812,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：没有在位置信息中找到 Leader，可能由日志流无主副本导致。
 
 * 解决方法：排查确定对应日志流是否有主副本。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4723 (HY000) : mapping between tablet and log stream does not exist
 
@@ -786,6 +826,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：一般会自动重试。若重试后仍报错，需排查对应 Tablet 是否存在以及是否成功汇报。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4724 (HY000) : unexpected tablet existence
 
 * OceanBase 错误码：4724
@@ -793,6 +838,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：内部错误。预期外的 Tablet 存在，可能是在创建重复的 Tablet。
 
 * 解决方法：请联系技术支持人员确认。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4725 (HY000) : tablet does not exist
 
@@ -802,6 +852,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：请联系技术支持人员确认。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4727 (HY000) : ls need revoke
 
 * OceanBase 错误码：4727
@@ -810,6 +865,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：内核自动处理，执行强行卸任逻辑。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4732 (HY000) : check cluster status", "%s
 
 * OceanBase 错误码：4732
@@ -817,6 +877,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：集群状态错误。
 
 * 解决方法：查看 `__all_cluster_info` 表，查看集群的 `cluster_role` 和 `switchover_status` 字段是否有异常。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4733 (HY000) : zone '%s' resource not enough to hold %ld new unit. You can check resource info by views: DBA_OB_UNITS, GV$OB_UNITS, GV$OB_SERVERS.\n%s
 
@@ -830,6 +895,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
   
 * 解决方法：查看资源已分配情况，合理调整需要的资源。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4734 (HY000) : zone '%s' server not enough to hold %ld new unit, please check zone valid servers
 
 * OceanBase 错误码：4734
@@ -842,6 +912,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：查看有效的 OBServer 节点数量，合理调整需要的资源。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4735 (HY000) : sstable not exist
 
 * OceanBase 错误码：4735
@@ -849,6 +924,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：在迁移过程中源端的多个 SSTable 合并成一个时找不到对应的 SSTable。
 
 * 解决方法：一般只需过一段时间重试，若长时间报错，请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4736 (HY000) : resource unit value is invalid
 
@@ -858,6 +938,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：调整为有效的 Unit 规格。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4737 (HY000) : log stream already exist
 
 * OceanBase 错误码：4737
@@ -865,6 +950,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：正在迁移复制目的端的日志流已存在。
 
 * 解决方法：一般无需处理，目的端会等待本地的日志流被 GC 以后，重试成功。长时间报错，请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4740 (HY000) : log stream replica task result is uncertain
 
@@ -874,6 +964,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：无需处理。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4741 (HY000) : log stream wait log replay timeout
 
 * OceanBase 错误码：4741
@@ -881,6 +976,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：迁移复制目的端时，等待 Clog 回放超时。
 
 * 解决方法：一般无需处理，迁移会进行重试。长时间报错，请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4742 (HY000) : log stream wait tablet ready timeout
 
@@ -890,6 +990,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：一般无需处理，迁移会进行重试。长时间报错，请联系技术支持人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4743 (HY000) : freeze service epoch is not expected
 
 * OceanBase 错误码：4743
@@ -898,6 +1003,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方式：合并功能内部错误码。请联系技术支持人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4744 (HY000) : already exist larger frozen_scn in __all_freeze_info", "%s
 
 * OceanBase 错误码：4744
@@ -905,6 +1015,11 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * 错误原因：上一轮合并未完成的前提下，再次执行了 major freeze。
 
 * 解决方式：等待上一轮合并结束，再发起 major freeze。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4745 (HY000) : delete server not allowed
 
@@ -917,8 +1032,18 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方法：同 Zone 下增加空余 Server 或对空余 Server 进行扩容。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4746（HY000）：Network error and packet status unknown. Abort auto retry
 
 * OceanBase 错误码：4746
 * 错误原因：分布式计划执行过程中，网络不稳定或节点宕机，导致调度失败。
 * 解决方式：重新执行该 SQL 语句。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
