--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/5.ora-02000-to-ora-04999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/5.ora-02000-to-ora-04999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-02000 ~ ORA-04999
-===========================================
+# ORA-02000 ~ ORA-04999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -581,6 +580,11 @@ ORA-02449：unique/primary keys in table (%.\*s) referenced by foreign key (%.\*
 * 错误原因：删除另一个表中外键引用的具有唯一键或主键的表。
 
 * 解决方法：在对表执行上述操作之前，请删除其他表中的外键约束。通过发出以下命令，可以看到哪些约束引用了一个表：`SELECT * FROM USER_CONSTRAINTS WHERE TABLE_NAME = "tabnam";`。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-03001：unimplemented feature
 ----------------------------------------------------
