--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/6.ora-05000-to-ora-10000-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/6.ora-05000-to-ora-10000-of-oracle-mode.md
@@ -119,6 +119,11 @@
 
 * 解决方式：检查程序逻辑并确保动态语句字符串已正确初始化。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ORA-06546：DDL statement is executed in an illegal context
 
 * OceanBase 错误码：5981
@@ -135,6 +140,11 @@
 
 * 解决方式：使用 `EXECUTE IMMEDIATE`，没用 `USING` / `INTO` 子句来执行 DDL 语句。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ORA-06547：RETURNING clause must be used with INSERT, UPDATE, or DELETE statements
 
 * OceanBase 错误码：9713
@@ -144,6 +154,11 @@
 * 错误原因：带有 RETURNING 子句的 EXECUTE IMMEDIATE 仅用于执行动态 UPDATE、INSERT 或 DELETE 语句。
 
 * 解决方式：仅对 INSERT、UPDATE 或 DELETE 语句使用 EXECUTE IMMEDIATE 中的 RETURNING 子句。 对于其他语句，请改用 USING 子句。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ORA-06548：no more rows needed
 
@@ -196,6 +211,11 @@
 
 * 解决方法：指定有效对象的名称，去除无效的结尾部分。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ORA-06576：not a valid function or procedure name
 
 * Ocean Base 错误码：5980
@@ -205,6 +225,11 @@
 * 错误原因：找不到要调用的函数（如果存在 `INTO` 子句）或过程（如果语句没有 `INTO` 子句）。
 
 * 解决方法：更改语句以调用函数或过程。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ORA-07452：specified resource manager plan does not exist in the data dictionary
 
@@ -245,6 +270,11 @@
 * 错误原因：内部错误码。索引可能不一致。
 
 * 解决方法：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ORA-08177：can't serialize access for this transaction
 
