--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-20000 ~ ORA-29999
-===========================================
+# ORA-20000 ~ ORA-29999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -59,6 +58,11 @@ ORA-22369：invalid parameter encountered in method %s
 
 * 解决方法：检查传递的参数，并确保这些参数是允许的。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-22370：incorrect usage of method %s
 -----------------------------------------------------------
 
@@ -69,6 +73,11 @@ ORA-22370：incorrect usage of method %s
 * 错误原因：`SYS.任何类型`、`SYS.任何数据` or `SYS.任意数据集` 被不当使用。
 
 * 解决方法：采用正确用法。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-22625：OCIAnyData is not well-formed
 ------------------------------------------------------------
@@ -81,6 +90,11 @@ ORA-22625：OCIAnyData is not well-formed
 
 * 解决方法：在添加属性之前，请使用 `OCIAnyDataBeginConstruct` 初始化句柄。使用 `OCIAnyDataEndConstruct` 完成构造。或者使用 `OCIAny-DataConvert` 进行构造。在访问属性之前，请确保它已正确构造。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-22626：Type Mismatch while constructing or accessing OCIAnyData
 ---------------------------------------------------------------------------------------
 
@@ -91,6 +105,11 @@ ORA-22626：Type Mismatch while constructing or accessing OCIAnyData
 * 错误原因：提供的类型与 AnyData 的类型不匹配。如果尝试分段构造或访问，则提供的类型与当前属性的类型不匹配。
 
 * 解决方法：确保提供的类型与要构造或访问的对象的类型匹配。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-22627：tc \[%s\] must be that of object/varray/nested table
 -----------------------------------------------------------------------------------
@@ -103,6 +122,18 @@ ORA-22627：tc \[%s\] must be that of object/varray/nested table
 
 * 解决方法：确保类型代码是 `OCI_TYPECODE_OBJECT` 或 `OCI_TYPECODE_VARRAY` 或 `OCI_TYPECODE_TABLE`。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
+## ORA-22806：not an object or REF
+
+* OceanBase 错误码：5477
+* SQLSTATE：42000
+* 错误原因：不是对象或 REF。
+* 解决方法：使用对象或者 REF 重试操作。
+
 ORA-22816：unsupported feature with RETURNING clause
 ------------------------------------------------------------------------
 
@@ -114,6 +145,11 @@ ORA-22816：unsupported feature with RETURNING clause
 
 * 解决方式：使用单独的语句来获取值。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-22928：invalid privilege on directories
 ---------------------------------------------------------------
 
@@ -124,6 +160,16 @@ ORA-22928：invalid privilege on directories
 * 错误原因：尝试授予或撤销对于目录的权限，但是该权限对于目录是无效的。
 
 * 解决方法：只能授予或撤销对于目录的 `CREATE`、`DELETE`、`READ`、`WRITE` 和 `EXECUTE`权限。不要授予或撤销其他权限。
+
+## ORA-22990：LOB locators cannot span transactions
+
+* OceanBase 错误码：9715
+
+* SQLSTATE：HY000
+
+* 错误原因：LOB 句柄不支持跨事务的写操作。
+
+* 解决方法：对 LOB 句柄进行重新赋值后再进行写操作。
 
 ORA-22998：CLOB or NCLOB in multibyte character set not supported
 -------------------------------------------------------------------------------------
@@ -156,6 +202,11 @@ ORA-24234：unable to get source of string \\'%.\*s\\'.\\'%.\*s\\', insufficient
 
 * 解决方法：确保指定的对象存在，并且具有查看其源所需的权限。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-24235：bad value for object type: %.\*s
 ---------------------------------------------------------------
 
@@ -167,6 +218,11 @@ ORA-24235：bad value for object type: %.\*s
 
 * 解决方法：确保指定的对象类型是以下类型之一：包、包体、过程、函数、触发器、类型和类型体。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-24236：source text is empty
 ---------------------------------------------------
 
@@ -177,6 +233,11 @@ ORA-24236：source text is empty
 * 错误原因：提供给 `DBMS_PREPROCESSOR` 子程序的输入源文本为空。
 
 * 解决方法：传递非空输入源文本作为输入。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-24334：no descriptor for this position
 --------------------------------------------------------------
@@ -263,6 +324,11 @@ ORA-24761：transaction rolled back: transaction idle timeout
 
 * 错误原因：事务回滚，事务超时。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-24761：transaction rolled back: transaction context count reach limit
 ---------------------------------------------------------------------------------------------
 
@@ -327,6 +393,11 @@ ORA-25021 : cannot reference a trigger defined on another table
 
 * 解决方式：在同一张表上创建引用的触发器。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-25022 : cannot reference a trigger of a different type
 ----------------------------------------------------------------------------------------
 
@@ -337,6 +408,11 @@ ORA-25022 : cannot reference a trigger of a different type
 * 错误原因：FOLLOWS 或 PRECEDES 子句中引用的触发器是不同的类型或不是组合触发器。
 
 * 解决方式：将引用的触发器创建为相同类型或组合触发器。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-25023 : Cyclic trigger dependency is not allowed
 ----------------------------------------------------------------------------------------
@@ -349,6 +425,11 @@ ORA-25023 : Cyclic trigger dependency is not allowed
 
 * 解决方式：不要创建可以形成循环依赖的触发器。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-25025 : cannot specify PRECEDES clause
 ----------------------------------------------------------------------------------------
 
@@ -359,6 +440,11 @@ ORA-25025 : cannot specify PRECEDES clause
 * 错误原因：创建常规触发器时指定了 PRECEDES 子句。
 
 * 解决方式：不要创建带有 PRECEDES 子句的常规触发器。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-25128：No insert/update/delete on table with constraint disabled and validated
 ------------------------------------------------------------------------------------------------------
@@ -444,6 +530,11 @@ ORA-28115：policy with check option violation
 
 * 错误原因：写入数据的安全标记错误。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-28106：input value for argument #%d is not valid
 ------------------------------------------------------------------------
 
@@ -462,6 +553,11 @@ ORA-28264：Client identifier is too long
 
 * 错误原因：超过 Client ID 上限 64 字节。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ORA-28265：Namespace beginning with 'SYS_' is not allowed
 -----------------------------------------------------------------------------
 
@@ -470,6 +566,11 @@ ORA-28265：Namespace beginning with 'SYS_' is not allowed
 * SQLSTATE：HY000
 
 * 错误原因：创建的 `context namespace` 不能有 `'SYS_'` 前缀。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ORA-28267：The maximum size specified by the _session_context_size parameter was exceeded
 --------------------------------------------------------------------------------------------------------------
@@ -480,6 +581,11 @@ ORA-28267：The maximum size specified by the _session_context_size parameter wa
 
 * 错误原因：`session based context` 键值对个数超过了 `_session_context_size` 指定的上限。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ORA-28268：Invalid NameSpace Value
 ------------------------------------------------------
 
@@ -488,6 +594,11 @@ ORA-28268：Invalid NameSpace Value
 * SQLSTATE：HY000
 
 * 错误原因：`context namespace namespace` 名称不合法。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ORA-29253：Invalid count argument passed to procedure dbms_sql.define_array
 -----------------------------------------------------------------------------------------------
@@ -499,6 +610,11 @@ ORA-29253：Invalid count argument passed to procedure dbms_sql.define_array
 * 错误原因：在调用包 `dbms_sql` 的过程定义数组时指定的 `count` 参数的值无效。无效值为负数和空值。参数必须是正整数。
 
 * 解决方法：请更正 PL/SQL 程序，以便只传递有效参数来定义数组，然后重试。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-29257：host %.\*s unknown
 -------------------------------------------------
@@ -532,6 +648,11 @@ ORA-29295：invalid mime header tag
 * 错误原因：扫描 `mime` 头标记的字符串时出错
 
 * 解决方法：验证源数据是否为有效的 `mime` 头字符串，格式是否为 charset/encoding/encoded string。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-29357：%s %.\*s already exists
 ------------------------------------------------------
