--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-30000 ~ ORA-49999
-===========================================
+# ORA-30000 ~ ORA-49999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -151,6 +150,11 @@ ORA-30205：invalid Character set
 * 错误原因：指定的字符集无效。
 
 * 解决方法：检查字符集 ID 是否有效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-30482：DISTINCT not allowed here
 --------------------------------------------------------
@@ -410,6 +414,11 @@ ORA-31011：XML parsing failed
 * 错误原因：尝试解析文档时，XML 解析器返回错误。
 
 * 解决方法：检查要解析的文档是否有效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ORA-31600：invalid input value %.\*s for parameter %.\*s in function %.\*s
 ----------------------------------------------------------------------------------------------
@@ -890,6 +899,11 @@ ORA-38900：miss mandatory column %.\*s of error log table
 
 * 解决方法：将命名列添加到错误日志记录表中。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-39956：duplicate setting for PL/SQL compiler parameter %.\*s
 ------------------------------------------------------------------------------------
 
@@ -901,6 +915,11 @@ ORA-39956：duplicate setting for PL/SQL compiler parameter %.\*s
 
 * 解决方法：删除重复的 PL/SQL 编译器设置。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-39962：invalid parameter for PLSQL_CCFLAGS
 ------------------------------------------------------------------
 
@@ -911,6 +930,12 @@ ORA-39962：invalid parameter for PLSQL_CCFLAGS
 * 错误原因：`PLSQL_CCFLAGS` 参数的值无效。
 
 * 解决方法：为 `PLSQL_CCFLAGS` 参数指定一个有效值。
+
+## ORA-40587：invalid JSON type
+
+* OceanBase 错误码：5441
+* SQLSTATE：42000
+* 错误原因：无效的 JSON 类型，非法的 JSON 文本。
 
 ORA-42399：cannot perform a DML operation on a read-only view
 ---------------------------------------------------------------------------------
