--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
@@ -26,14 +26,6 @@
 
 * 解决方式：请联系技术支持人员协助排查。
 
-## ERROR 4004 (08S01) : Failed to listen to the port
-
-* OceanBase 错误码：4004
-
-* 错误原因：网络断开导致监听服务启动失败。
-
-* 解决方式：请联系技术支持人员协助排查。
-
 ## ERROR 4005 (HY000) : The object is initialized twice
 
 * OceanBase 错误码：4005
@@ -66,6 +58,11 @@
 
 * 解决方式：请联系技术支持人员协助排查。
 
+相关问题处理 KB：
+
+* [OBServer 启动失败，错误代码 4009](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000163?back=kb)
+* [OBServer 启动失败，错误码 4009](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000010162?back=kb)
+
 ## ERROR 4010 (HY000) : Wrong RPC command version
 
 * OceanBase 错误码：4010
@@ -87,6 +84,11 @@
   * 设置更大的超时时间。
 
   * 请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+* [Bootstrap 失败，错误代码 4012](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000108?back=kb)
+* [mysqldump 工具导出数据错误，错误代码 4012](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000141?back=kb)
 
 ## ERROR 4012 (HY000) : Task timeout and not executed
 
@@ -148,14 +150,6 @@
 
 * 兼容 MySQL 错误码：4012
 
-## ERROR 4013 (HY001) : No memory or reach tenant memory limit
-
-* OceanBase 错误码：4013
-
-* 错误原因：租户或 OBServer 节点内存不足。
-
-* 解决方式：如果是普通租户内存不足，通过增加租户内存规格解决；如果是 OBServer 节点内存不足，请联系技术支持人员协助排查。
-
 ## ERROR 4014 (HY000) : Inner state error
 
 * OceanBase 错误码：4014
@@ -172,6 +166,10 @@
 
 * 解决方式：请联系技术支持人员协助排查。
 
+相关问题处理 KB：
+
+* [Bootstrap 失败，错误代码 4015](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000103?back=kb)
+
 ## ERROR 4016 (HY000) : Internal error
 
 * OceanBase 错误码：4016
@@ -179,6 +177,13 @@
 * 错误原因：内部错误码。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+* [OBServer 启动失败，错误代码 4016](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000004?back=kb)
+* [Bootstrap 失败，错误代码 4016](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000100?back=kb)
+* [group_concat 函数错误，错误代码 4016](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000048?back=kb)
+* [MySQL 模式下时间类型间隔计算错误，错误代码 4016](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000156?back=kb)
 
 ## ERROR 4017 (HY000) : Entry already exist
 
@@ -195,6 +200,10 @@
 * 错误原因：数据不存在。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+* [删除服务器错误，错误代码 4018](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000122?back=kb)
 
 ## ERROR 4019 (HY000) : Size overflow
 
@@ -236,6 +245,10 @@
 
 * 解决方式：重试，或联系技术支持人员协助排查。
 
+相关问题处理 KB：
+
+* [合并超时，错误代码 4023](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000152?back=kb)
+
 ## ERROR 4024 (HY000) : Buffer not enough
 
 * OceanBase 错误码：4024
@@ -243,6 +256,10 @@
 * 错误原因：空间不足。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+* [SHOW PROXYSESSION 语句报错，错误码 4024](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000055?back=kb)
 
 ## ERROR 4025 (HY000) : Partial failed
 
@@ -284,6 +301,10 @@
 
 * 解决方式：调大租户内存资源。
 
+相关问题处理 KB：
+
+* [内存超限，错误码 4030](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000106?back=kb)
+
 ## ERROR 4031 (HY004) : Unknown object
 
 * OceanBase 错误码：4031
@@ -300,6 +321,11 @@
 
 * 解决方式：请联系技术支持人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ## ERROR 4034 (HY000) : Deserialize error
 
 * OceanBase 错误码：4034
@@ -307,6 +333,11 @@
 * 错误原因：反序列化失败。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ## ERROR 4035 (HY000) : Asynchronous IO error
 
@@ -371,6 +402,11 @@
 * 错误原因：存储层 SCHEMA 无效。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4047 (HY000) : Medium compaction info is not valid
 
@@ -492,6 +528,10 @@
 
 * 解决方式：请联系技术支持人员协助排查。
 
+相关问题处理 KB：
+
+* [OBServer 启动失败，错误代码 4070](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000154?back=kb)
+
 ## ERROR 4071 (HY000) : Already done
 
 * OceanBase 错误码：4071
@@ -587,6 +627,10 @@
 * 错误原因：数据校验和出错。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+* [合并错误，错误代码 4103](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000083?back=kb)
 
 ## ERROR 4104 (HY000) : Initialize error
 
@@ -836,13 +880,18 @@
 
 * 解决方式：请联系技术支持人员协助排查。
 
-ERROR4179 (HY000) : %s not allowed
+## ERROR 4179 (HY000) : %s not allowed
 
 * OceanBase 错误码：4179
 
 * 错误原因：不支持的功能。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+相关问题处理 KB：
+
+* [OBServer 停止错误，错误代码 4179](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000115?back=kb)
+* [修改 Primary Zone 失败，错误代码 4179](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000049?back=kb)
 
 ## ERROR 4180 (HY000) : No empty entry
 
@@ -1020,6 +1069,10 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：请联系技术支持人员协助排查。
 
+相关问题处理 KB：
+
+* [OCP 创建集群错误，错误代码 4216](https://www.oceanbase.com/knowledge-base/ocp-ee-20000003958?back=kb)
+
 ## ERROR 4217 (HY000) : Major freeze not allowed now
 
 * OceanBase 错误码：4217
@@ -1027,6 +1080,10 @@ ERROR4179 (HY000) : %s not allowed
 * 错误原因：暂时不允许大版本冻结。
 
 * 解决方式：可能系统处于升级或其他过程中，不可以进行大版本冻结。
+
+相关问题处理 KB：
+
+* [无法进行合并，错误代码 4217](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000145?back=kb)
 
 ## ERROR 4218 (HY000) : prepare freeze failed
 
@@ -1100,7 +1157,7 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：请联系技术支持人员协助排查。
 
-## ERROR 4236 (HY000) : ObConfig return ## ERROR code
+## ERROR 4236 (HY000) : ObConfig return error code
 
 * OceanBase 错误码：4236
 
@@ -1116,7 +1173,7 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：检查 `obconfig_url` 配置项，同时联系技术支持人员协助排查。
 
-## ERROR 4239 (HY000) : Can not use mergejoin to join the tables without join conditions
+## ERROR 4239 (HY000) : Can not use merge join to join the tables without join conditions
 
 * OceanBase 错误码：4239
 
@@ -1692,6 +1749,10 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：请联系技术支持人员协助排查。
 
+相关问题处理 KB：
+
+* [OBServer 启动失败，错误代码 4337](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000033?back=kb)
+
 ## ERROR 4338 (HY000) : open twice
 
 * OceanBase 错误码：4338
@@ -1988,7 +2049,7 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：请联系技术支持人员协助排查。
 
-## ERROR 4377 (HY000) : fatal internal ## ERROR in \[%.\*s\]
+## ERROR 4377 (HY000) : fatal internal error in \[%.\*s\]
 
 * OceanBase 错误码：4377
 
@@ -2012,6 +2073,11 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：新建一张表，如果需要可以把原表的数据导过去。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4381 (HY000) : Not supported, deprecated MySQL feature
 
 * OceanBase 错误码：4381
@@ -2019,6 +2085,11 @@ ERROR4179 (HY000) : %s not allowed
 * 错误原因：在指定数据类型时，使用 float(m,d) / double(m,d) 声明带精度的浮点数类型。
 
 * 解决方式：使用 decimal(m,d) 定点数类型替代 float(m,d) / double(m,d) 来指定精确的小数。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ## ERROR 4383 (HY000) : transaction id is not ready
 
@@ -2028,6 +2099,11 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：重试获取，直到超时。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4386 (HY000) : Do not allow removing leader
 
 * OceanBase 错误码：4386
@@ -2036,13 +2112,28 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：无需处理。
 
-## ERROR 4388 (HY000) : Unexpected internal ## ERROR happen, please checkout the internal errcode
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
+## ERROR 4387 (HY000) : Failed to switch resource group
+
+* OceanBase 错误码：4387
+* 兼容 MySQL 错误码：13937
+
+## ERROR 4388 (HY000) : Unexpected internal error happen, please checkout the internal errcode
 
 * OceanBase 错误码：4388
 
 * 错误原因：出现非预期的内部错误。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
 
 ## ERROR 4389 (HY000) : processing time is too long
 
@@ -2052,6 +2143,11 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：内部错误码。如果返回，请联系技术支持人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ## ERROR 4390 (HY000) : Schema of remote server is not refreshed yet
 
 * OceanBase 错误码：4389
@@ -2060,6 +2156,11 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：请联系技术支持人员协助排查。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ## ERROR 4391（HY000）：ddl sstable version range cross
 
 * OceanBase 错误码：4391
@@ -2067,3 +2168,8 @@ ERROR4179 (HY000) : %s not allowed
 * 错误原因：DDL SSTable 返回交叉。
 
 * 解决方式：请联系技术支持人员协助排查。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
