--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -1,5 +1,4 @@
-ORA-00000 ~ ORA-00999
-===========================================
+# ORA-00000 ~ ORA-00999
 
   <main id="notice" >
     <h4>功能适用性</h4>
@@ -15,7 +14,7 @@ ORA-00000：PX DOP downgrade from %ld to %ld
 
 * 错误原因：正常退出。
 
-ORA-00000：parallel_max_servers downgrade due to insufficent  cpu resource from %ld to %ld. deprecated.
+ORA-00000：parallel_max_servers downgrade due to insufficent  cpu resource from %ld to %ld. deprecated
 ------------------------------------------------------------------------------------------------------------
 
 * OceanBase 错误码：5781
@@ -84,6 +83,11 @@ ORA-00036：maximum number of recursive SQL levels (%ld) exceeded
 
 * 解决方式：删除递归 SQL 或者递归触发器。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-00051：timeout occurred while waiting for a resource
 ----------------------------------------------------------------------------
 
@@ -117,49 +121,35 @@ ORA-00060：deadlock detected while waiting for resource
 
 * 解决方式：查看 Trace 文件并查看所涉及的事务和资源。如有必要，请重试。
 
-ORA-00600：Invalid JSON text
--------------------------------------------------
+## ORA-00600：arbitration service does not exist
 
-* OceanBase 错误码：5411
+* OceanBase 错误码：4747
 
-* SQLSTATE：22032
+* SQLSTATE：HY000
 
-* 错误原因：内部错误码。
+* 错误原因：集群尚未配置仲裁服务的地址。
 
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+* 解决方式：不支持在未配置仲裁服务地址的情况下做仲裁相关操作。可以通过 OCP 或执行 SQL 命令 `alter system add arbitration service‘$svr_ip:$svr_port’;` 为集群添加仲裁服务地址。
 
-ORA-00600：Invalid JSON text in argument
--------------------------------------------------------------
+## ORA-00600：arbitration service already exist
 
-* OceanBase 错误码：5412
+* OceanBase 错误码：4748
 
-* SQLSTATE：22032
+* SQLSTATE：HY000
 
-* 错误原因：内部错误码。
+* 错误原因：集群已经存在一个有效的仲裁服务地址。
 
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+* 解决方式：一个集群不支持同时配置多个仲裁服务。
 
-ORA-00600：The JSON binary value contains invalid data
----------------------------------------------------------------------------
+## EORA-00600: wait degration finished timeout
 
-* OceanBase 错误码：5413
+* OceanBase 错误码：4751
 
-* SQLSTATE：22032
+* SQLSTATE：HY000
 
-* 错误原因：内部错误码。
+* 错误原因：Stop Server 时等待租户降级超时。
 
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
-ORA-00600：Invalid JSON path expression
-------------------------------------------------------------
-
-* OceanBase 错误码：5414
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+* 解决方式：重新发起 Stop Server 命令直到成功。
 
 ORA-00600：Cannot create a JSON value from a string
 ------------------------------------------------------------------------
@@ -238,17 +228,6 @@ ORA-00600：The JSON value is too big to be stored in a JSON column
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
-ORA-00600：The JSON object contains a key name that is too long
-------------------------------------------------------------------------------------
-
-* OceanBase 错误码：5422
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
 ORA-00600：JSON column '%.\*s' cannot be used in key specification
 ---------------------------------------------------------------------------------------
 
@@ -315,17 +294,6 @@ ORA-00600：The JSON document exceeds the maximum depth
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
-ORA-00600：JSON documents may not contain NULL member names
---------------------------------------------------------------------------------
-
-* OceanBase 错误码：5429
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
 ORA-00600：Invalid default value for \\'%.\*s\\'
 --------------------------------------------------------------------
 
@@ -341,28 +309,6 @@ ORA-00600：A path expression is not a path to a cell in an array
 ------------------------------------------------------------------------------------
 
 * OceanBase 错误码：5431
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
-ORA-00600：No value was found by '%.192s' on the specified path
-------------------------------------------------------------------------------------
-
-* OceanBase 错误码：5432
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
-ORA-00600：More than one value was found by '%.192s' on the specified path
------------------------------------------------------------------------------------------------
-
-* OceanBase 错误码：5433
 
 * SQLSTATE：22032
 
@@ -425,8 +371,7 @@ ORA-00900：invalid SQL statement
 
 * 解决方法：请参考您的 OceanBase 数据库对应版本的《SQL 参考（Oracle 模式）》查找正确的 SQL 语句。
 
-ORA-00900：You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for theright syntax to use
------------------------------------------------------------------------------------------------------------------------------------------------------------
+# ORA-00900：You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for theright syntax to use
 
 * OceanBase 错误码：5006
 
@@ -435,6 +380,10 @@ ORA-00900：You have an error in your SQL syntax; check the manual that correspo
 * 错误原因：SQL 语句存在错误。
 
 * 解决方法：请参考您的 OceanBase 数据库对应版本的《SQL 参考（Oracle 模式）》查找正确的 SQL 语句。
+
+相关问题处理 KB：
+
+  [Oracle 租户中创建带 RANGE 或 LIST 类型分区的表组错误，错误代码 ORA-00900](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000174?back=kb)
 
 ORA-00902：invalid datatype
 -----------------------------------------------
@@ -481,6 +430,11 @@ ORA-00904：'%.\*s': invalid identifier
 
 * 错误原因：字符串中含有无效标识符。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
 ORA-00905：missing keyword
 ----------------------------------------------
 
@@ -519,6 +473,18 @@ ORA-00913：too many values
 
 * 错误原因：值太多。
 
+## ORA-00917：missing comma
+
+* OceanBase 错误码：7403
+* SQLSTATE：42000
+* 错误原因：在 INSERT 语句或形式为 ((C,D),(E,F), ...) 的列或值列表中省略了所需的逗号。
+* 解决方法：请更正语法。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
 ORA-00918：column '%.\*s' in %.\*%s ambiguously defined
 -------------------------------------------------------------------------
 
@@ -538,6 +504,11 @@ ORA-00925：missing INTO keyword
 * 错误原因：执行 INSERT 语句时缺失关键词 INTO。
 
 * 解决方式：添加缺少的 INTO 关键字并重新执行该语句。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
 
 ORA-00926：missing VALUES keyword
 -----------------------------------------------------
@@ -611,8 +582,7 @@ ORA-00939：too many arguments for function
 
 * 错误原因：函数参数太多。
 
-ORA-00942：table or view \\'%s.%s\\'does not exist
-----------------------------------------------------------------------
+## ORA-00942：table or view \\'%s.%s\\'does not exist
 
 * OceanBase 错误码：5019
 
@@ -622,8 +592,11 @@ ORA-00942：table or view \\'%s.%s\\'does not exist
 
 * 解决方式：检查您的 SQL 拼写。特别地，对于OceanBase V2.2.70 以后的版本，检查当前角色的权限。
 
-ORA-00942：table or view '%.\*s' does not exist
--------------------------------------------------------------------
+相关问题处理 KB：
+
+  [OBServer 重启失败，错误代码 5019](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000042?back=kb)
+
+## ORA-00942：table or view '%.\*s' does not exist
 
 * OceanBase 错误码：5201
 
@@ -632,6 +605,11 @@ ORA-00942：table or view '%.\*s' does not exist
 * 错误原因：表或视图不存在。对于 OceanBase V2.2.70 以后的版本，由于新增了角色权限，如果当前角色不具有某些表或视图的 `SELECT` 权限，也会返回这个错误。
 
 * 解决方式：检查您的 SQL 拼写。特别地，对于OceanBase V2.2.70 以后的版本，检查当前角色的权限。
+
+相关问题处理 KB：
+
+* [PL 权限不足，错误代码 ORA-00942](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000001050?back=kb)
+* [Oracle 模式下普通用户无法通过 dbms_metadata.get_ddl() 获取对象的 DDL，错误代码 ORA-00942](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000169?back=kb)
 
 ORA-00947：not enough values
 ------------------------------------------------
